# HaMaGeoLib

./: .gitignore  LICENSE  README.md  conftest.py  environment.yml  pytest.ini  setup.py
HaMaGeoLib/: __init__.py
HaMaGeoLib/core/: __init__.py
HaMaGeoLib/utils/: __init__.py  dealii_param_parser.py
HaMaGeoLib/visualization/: __init__.py
conda_recipe/: meta.yaml
cpp/: CMakeLists.txt
cpp/include/: IRK4Solver.h  metastable.h
cpp/src/: IRK4Solver.cpp  metastable.cpp  metastable_generate_diagram.cpp
cpp/tests/: IRK4Solver_test.cpp  metastable_test.cpp
files/csv/: rheology.csv
hamageolib/: __init__.py
hamageolib/core/: AnalyticalSolution.py  GrainSize.py  Rheology.py  __init__.py  eos.py  melt.py  plot_melting.ipynb  post_process.py
hamageolib/utils/: __init__.py  case_options.py  case_options_haoyuan.py  dealii_param_parser.py  exception_handler.py  file_reader.py  geometry_utilities.py  handy_shortcuts_haoyuan.py  hefesto_helper.py  interp_utilities.py  nump_utilities.py  plot_helper.py  pyvista_utilities.py  vtk_utilities.py  world_builder_file_parser.py  world_builder_param_parser.py
hamageolib/visualization/: __init__.py
notebooks/examples/: utils_case_options.ipynb  utils_overview_and_usage.ipynb  utils_paraview_scripter.ipynb  utils_plot_helper.ipynb  utils_vtk_helper.ipynb
notebooks/experiments/: MO_kinetics.ipynb  RK.ipynb  gplately_slab_dat.ipynb
scripts/: parse_block_newton.awk  parse_block_output.awk  parse_snapshots.awk
scripts/awk/: parse_block_header.awk  parse_block_newton_v3_1_0.awk  parse_block_output.awk
(+347 files in other folders)
